--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.7.0",
     "flowbite-react": "^0.11.2",
     "jsonwebtoken": "^9.0.2",
     "react": "^19.0.0",
