--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
+    "firebase": "^11.6.0",
     "flowbite-react": "^0.11.2",
     "jsonwebtoken": "^9.0.2",
     "react": "^19.0.0",
