--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "flowbite-react": "^0.11.2",
     "jsonwebtoken": "^9.0.2",
     "react": "^19.0.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
